<resources>
    <string name="app_name">Memory Game</string>
    <string name="refresh">Refresh</string>
    <string name="level">Choose Your Level</string>
    <string name="custom">Create custom game</string>
    <string name="presentGame">Play Your Game</string>
    <string name="refresh_game">Are you sure want to refresh?</string>
    <string name="saveGame">Save Game</string>
    <string name="moves">Moves</string>
    <string name="pair">Pairs</string>
    <string name="easy_level">Easy (4x2)</string>
    <string name="medium_level">Medium (4x3)</string>
    <string name="hard_level">Hard (4x6)</string>
    <string name="super_hard_level">Extremely Hard (5x8)</string>
    <string name="cancel">Cancel</string>
    <string name="chooseLevel">Choose Your Level</string>
    <string name="create_board">Create Your Own Board</string>
    <string name="fetch">Fetch Your Memory Game</string>
    <string name="custom_game">You are playing the custom game</string>
    <string name="refresh_done">Successfully Refreshed</string>
    <string name="refresh_ask">Are you sure to refresh your game?</string>
    <string name="not_find_game">We cannot find such game</string>
    <string name="have_won_game">You won the game</string>
    <string name="is_up_card">This card is up</string>
    <string name="win_game">Yayyy! You win the game</string>
    <string name="existed_game">This game is already existed</string>
    <string name="error">Encounter Error while saving</string>
    <string name="not_create">Cannot create the game</string>
    <string name="upload_done">Uploading Done</string>
    <string name="choose_pic">Choose Pictures</string>
    <string name="letter_code">Game name must be at least 5 letters long</string>
    <string name="permission">We need this permission to start the game</string>
    <string name="fail_upload">Fail to upload images</string>
    <string name="source_code">Source Code</string>

    <string name="facebook_app_id" translatable="false">727642788265573</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">56789</string>
    <string name="welcome_game">Welcome to Memory Game</string>
    <string name="email_or_phone">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_out_google">Log Out Google Account</string>
    <string name="welcome_user">Welcome</string>
    <string name="login_failed_google">Login failed due to</string>
    <string name="login_cancel">Login Cancelled</string>
    <string name="start_game">Find all the pairs before the time runs out!!</string>
    <string name="lost_game">Conquer the challenge again</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="incorrect_pass">Incorrect Password</string>
    <string name="log_in_success">Log In Success</string>
    <string name="log_in_failed">Log In Failed</string>

</resources>