<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/miRefresh"
        android:icon="@drawable/ic_menu_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/miChooseLevel"
        android:title="@string/level"
        app:showAsAction="never" />

    <item
        android:id="@+id/miCreateGame"
        android:title="@string/custom"
        app:showAsAction="never" />

    <item
        android:id="@+id/miPlayCustomGame"
        android:title="@string/presentGame"
        app:showAsAction="never" />

    <item
        android:id="@+id/miAbout"
        android:title="@string/source_code"
        app:showAsAction="never"/>

    <item
        android:id="@+id/miFBLogOut"
        android:title="@string/log_out"
        app:showAsAction="never"/>
</menu>